--- a/planning/templates/planning/create.html
+++ b/planning/templates/planning/create.html
@@ -6,14 +6,15 @@
 <div class="row">
   <div class="col-md-12">
     <div class="list-group list-group-horizontal">
+      <button id="del_room" class="bi-trash text-warning"></button>
       <div class="list-group list-group-horizontal" id="rooms">
         {% for room in rooms %}
         <a contenteditable="false" href="javascript:setRoomLive('{{room.number}}', '{{room.id}}', '{{ rooms|length }}', '{{room.moderator.id}}')"
           class="editable-text list-group-item list-group-item-action text-center rounded-0"
-          style=" border-bottom: 2px solid #1ce; height: 34px; padding: 2px 7px;" id="room_id{{ forloop.counter }}">
-          {{room.name}}</a>
+          style=" height: 34px; padding: 2px 7px;" id="room_id{{ room.id }}">
+          {{room.name}}
+        </a>
         {% empty %}
-
         <p> Désolé, pas de salles disponibles !</p>
         {% endfor %}
       </div>
@@ -74,6 +75,31 @@
   let room_sel = 0;
   let sess_sel = 0;
   let on_edit = false;
+  let btn_del = document.getElementById("del_room");
+
+  // Permet la suppression d'une salle
+  btn_del.addEventListener('click', function () {
+    if (room_sel != 0) {
+      fetch("{% url 'planning:salle-del-ajax' %}", {
+        method: "POST",
+        credentials: 'same-origin',
+        headers: {
+          "X-CSRFToken": csrf_token,
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          id: room_sel,
+        }),
+      }).then(function (response) {
+        console.log("La salle a été supprimée !");
+        // APPELLER LA FONCTION POUR RECHARGER LES SALLES ICI
+        load_rooms();
+      }).catch(function (error) {
+        console.log("Une erreur s'est produite : " + error);
+        console.log("c'est la merde (fonction delete-room)")
+      });
+    }
+  });
 
   // Modification d'un nom de salle quand on double-clique dessus
   function doubleClickRoom() {
@@ -101,6 +127,7 @@
     console.log(id, updatedText)
     editableUpdated.html(updatedText);
     this.setAttribute('contenteditable', 'false');
+    console.log("ROOM SEL =>", room_sel)
  
     // envoie le text updaté à la base de données
     fetch("{% url 'planning:salle-modif-ajax' %}", {
@@ -239,13 +266,23 @@
   // selection de la salle
   function setRoomLive(room_nb, room_id, nbTotal, moderator) {
     
-    for (let i = 1; i <= nbTotal; i++) {
-      document.getElementById('room_id' + i).style.color = '#000000';
-      document.getElementById('room_id' + i).style.borderBottom = document.getElementById('room_id' + i).style
-      .borderTop;
-    }
-    document.getElementById('room_id' + room_nb).style.borderBottom = "2px solid #1ce";
+    // for (let i = 1; i <= nbTotal; i++) {
+    //   document.getElementById('room_id' + i).style.color = '#000000';
+    //   document.getElementById('room_id' + i).style.borderBottom = document.getElementById('room_id' + i).style
+    //   .borderTop;
+    // }
+    // document.getElementById('room_id' + room_id).style.borderBottom = "2px solid #1ce";
 
+    let room_list = document.getElementsByClassName("editable-text");
+    console.log("LES ELEMENTS DE LA LISTE DES SALLES => ", room_list) 
+
+    for (let i = 0; i < room_list.length; i++) {
+      room_list[i].style.color = '#000000';
+      room_list[i].style.borderBottom = room_list[i].style.borderTop;
+    } 
+    // On met le petit trait bleu en dessous du nom de la salle sélectionnée
+    document.getElementById('room_id' + room_id).style.borderBottom = "2px solid #1ce";
+    
     load_planning(room_id);
     room_sel = room_id;
   }
@@ -280,11 +317,6 @@
         construct_rooms(message);
         console.log(message)
         location.reload()
-        // btn = document.createElement("button");
-        // btn.innerHTML = "+"
-        // btn.setAttribute("id", "add_room");
-        // btn.setAttribute("class", "btn")
-        // div.appendChild(btn)
       })
   }
 
@@ -314,7 +346,7 @@
     
     let div = document.getElementById("rooms");
     let a = document.createElement("a");
-    a.href = "javascript:setRoomLive('" + room.number + "." + room.id + "')"; // à adapter en fonction de tes besoins
+    a.href = "javascript:setRoomLive('" + room.number + "." + room.id + "')";
     a.className = "list-group-item list-group-item-action text-center rounded-0";
     a.style = "border-bottom: 2px solid #1ce; height: 34px; padding: 2px 7px;";
     a.innerHTML = room.number + "." + room.name;
@@ -403,7 +435,8 @@
     old_sel = tmp;
 
     on_edit = false;
-  }
+
+   }
   //edit presentation 
   function editPres( id, title, duration, author, author1, author2 )
     {
