--- a/planning/templates/planning/create.html
+++ b/planning/templates/planning/create.html
@@ -164,8 +164,10 @@
       "author1": document.getElementById("pres_author1").value,
       "author2": document.getElementById("pres_author2").value,
       "duration": document.getElementById("pres_duration").value,
+      "fichier": document.getElementById("pres_fichier").files[0].name,
       "date": date_sel,
     });
+    console.log(document.getElementById("pres_fichier").files)
     fetch(url, {
       method: "POST",
       credentials: 'same-origin',
@@ -180,6 +182,7 @@
     });
 
     console.log(document.getElementById("pres_author").value)
+    console.log(document.getElementById("pres_fichier").value)
     console.log(document.getElementById("pres_author1").value)
     console.log(document.getElementById("pres_author2").value)
 
@@ -262,6 +265,7 @@
         }
       })
   }
+  
   //On va chercher la liste des jours et on les affiche un par un
   function construct_rooms(room) {
     
@@ -305,7 +309,7 @@
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">  ${ pres.author } </h5>
             <span class=" float-end">  <small> ${ pres.duration } min &nbsp;&nbsp; </small>
-              <a href="#"  onclick="editPres( '${ pres.id }',' ${ pres.title }',' ${ pres.duration }',' ${ pres.author_id }')" class=" bi-pencil-fill text-secondary"></a> 
+              <a href="#"  onclick="editPres( '${ pres.id }','${ pres.title }','${ pres.duration }','${ pres.author_id }')" class=" bi-pencil-fill text-secondary"></a> 
             </span> 
           </div>   
           <div class="d-flex w-100 justify-content-between">
