--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -16,7 +16,14 @@
           <a class="nav-link" href="{% url 'planning:create' %}"> Plannifier </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'planning:show' %}"> planning </a>
+          <a class="nav-link" href="{% url 'planning:show' %}"> Planning </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:pupitre' %}"> Pupitre </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:intervenant' %}"> Intervenant </a>
         </li>
         
          <li class="nav-item">
