--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -13,7 +13,13 @@
           <a class="nav-link" href="{% url 'planning:congres' %}"> Congrès </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:intervenant' %}"> Intervenant </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'planning:create' %}"> Plannifier </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:upload' %}"> xXx_Up104d_xXx </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'planning:show' %}"> Planning </a>
@@ -22,9 +28,7 @@
           <a class="nav-link" href="{% url 'planning:pupitre' %}"> Pupitre </a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'planning:intervenant' %}"> Intervenant </a>
-        </li>
+        
         
          <li class="nav-item">
           <a class="nav-link" href="{% url 'admin:index' %}"> Admin </a>
