--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="{% url 'planning:create' %}"> Plannifier </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'planning:upload' %}"> xXx_Up104d_xXx </a>
+          <a class="nav-link" href="{% url 'planning:upload' %}"> Upload PPTX </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'planning:show' %}"> Planning </a>
