--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -13,10 +13,22 @@
           <a class="nav-link" href="{% url 'planning:congres' %}"> Congrès </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:intervenant' %}"> Intervenant </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'planning:create' %}"> Plannifier </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'planning:show' %}"> planning </a>
+          <a class="nav-link" href="{% url 'planning:upload' %}"> Upload PPTX </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:show' %}"> Planning </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:pupitre' %}"> Pupitre </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'upload:file' %}"> upload2 </a>
         </li>
         
          <li class="nav-item">
